--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/W1D1/JavaApplication2/nbproject/private/
+/W1D1/JavaApplication2/build/
