Fizz Buzz Program

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Temporary Items
 .apdisk
 /W1D1/JavaApplication2/nbproject/private/
 /W1D1/JavaApplication2/build/
+/W1D1/working FizzBuzz/nbproject/private/
