--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ Temporary Items
 /W1D1/JavaApplication2/nbproject/private/
 /W1D1/JavaApplication2/build/
 /W1D1/working FizzBuzz/nbproject/private/
+/W1D1/W1D2/nbproject/private/
+/W1D1/Dog/nbproject/private/
+/W1D1/DogTestDrive/nbproject/private/
+/W1D1/DogTestDrive/build/
