--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ Temporary Items
 /W1D1/Dog/nbproject/private/
 /W1D1/DogTestDrive/nbproject/private/
 /W1D1/DogTestDrive/build/
+/W1D1/GuessGame/nbproject/private/
+/W1D1/GussGame/nbproject/private/
+/W1D1/GussGame/build/
