--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ Temporary Items
 /W1D1/GuessGame/nbproject/private/
 /W1D1/GussGame/nbproject/private/
 /W1D1/GussGame/build/
+/W1D1/cardrive/nbproject/private/
+/W1D1/cardrive/build/
+/W1D3/JavaApplication10/nbproject/private/
+/W1D3/JavaApplication10/build/
