--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ Temporary Items
 /W1D1/cardrive/build/
 /W1D3/JavaApplication10/nbproject/private/
 /W1D3/JavaApplication10/build/
+/W1D4/homework3/nbproject/private/
+/W1D4/homework3/build/
