--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ Temporary Items
 /W1D3/JavaApplication10/build/
 /W1D4/homework3/nbproject/private/
 /W1D4/homework3/build/
+/W1D4/homework6/nbproject/private/
+/W1D4/homework6/build/
